--- a/task1/index.html
+++ b/task1/index.html
@@ -8,68 +8,56 @@
   <title>Spring</title>
   <link rel="stylesheet" href="font_awesome/css/font-awesome.min.css">
   <link rel="stylesheet" href="main.css">
-  <link rel="shortcut icon" href="img/icon/log_racoon.png" type="image/png">
+
 </head>
 
 <body>
   <div class="header-container">
+    <div class="search"><input type="text" class="search-input" placeholder="Search..." /><button class="search-button"><i class="fa fa-search" aria-hidden="true"></i></button></div>
+    <div class="small-menu">
+      <ul>
+        <li>HOME<i class="fa fa-chevron-right" aria-hidden="true"></i></li>
+        <li>PROJECTS<i class="fa fa-chevron-right" aria-hidden="true"></i></li>
+        <li>GUIDES<i class="fa fa-chevron-right" aria-hidden="true"></i></li>
+        <li>BLOG<i class="fa fa-chevron-right" aria-hidden="true"></i></li>
+        <li>TRAINING & CERTIFICATION<i class="fa fa-chevron-right" aria-hidden="true"></i></li>
+      </ul>
+    </div>
     <div class="button-more"><i class="fa fa-bars" aria-hidden="true"></i></div>
       <header>
-        <a href="https://spring.io/"><img src="img/logo.png" alt="spring logo"></a>
+        <a href="https://spring.io/" class="logo"><img src="img/logo.png" alt="spring logo"></a>
         <ul>
           <li>PROJECTS</li>
           <li>GUIDES</li>
           <li>BLOG</li>
           <li>TRAINING & CERTIFICATION</li>
-          <li><big><i class="fa fa-search" aria-hidden="true"></i></big></li>
+          <li class="search-icon"><big><i class="fa fa-search" aria-hidden="true"></i></big></li>
         </ul>
       </header>
+  </div>
+  <div class="big-search">
+    <input type="text" placeholder="Search for documentation, guides, and posts...">
+    <button class="big-search-button"><i class="fa fa-search" aria-hidden="true"></button></i>
   </div>
   <div class="body-container">
       <div class="main-body">
       <h1>Main Projects</h1>
       <span class="about">From configuration to security, web apps to big data – whatever the infrastructure needs of your application may be, there is a <strong>Spring Project</strong> to help you build it. Start small and use just what you need – <strong>Spring is modular by design</strong>.</span>
       <div class="sections">
-        <a href="#" class="section">
-          <img src="img/boot.svg" alt="boot">
-          <h4>SPRING BOOT</h4>
-           <span>Takes an opinionated view of building Spring applications and gets you up and running as quickly as possible.</span>
-        </a>
-        <a href="#" class="section">
-          <img src="img/framework.svg" alt="boot">
-          <h4>SPRING FRAMEWORK</h4>
-           <span>Provides core support for dependency injection, transaction management, web apps, data access, messaging and more.</span>
-        </a>
-        <a href="#" class="section">
-          <img src="img/data-flow.svg" alt="boot">
-          <h4>SPRING CLOUD DATA FLOW</h4>
-           <span>An orchestration service for composable data microservice applications on modern runtimes.</span>
-        </a>
-        <a href="#" class="section">
-          <img src="img/cloud.svg" alt="boot">
-          <h4>SPRING CLOUD</h4>
-           <span>Provides a set of tools for common patterns in distributed systems. Useful for building and deploying microservices.</span>
-        </a>
-          <a href="#" class="section">
-            <img src="img/springdata.png" alt="boot">
-            <h4>SPRING DATA</h4>
-             <span>Provides a consistent approach to data access – relational, non-relational, map-reduce, and beyond.</span>
-          </a>
-          <a href="#" class="section">
-            <img src="img/integration.png" alt="boot">
-            <h4>SPRING INTEGRATION</h4>
-             <span>Supports the well-known <em>Enterprise Integration Patterns</em> via lightweight messaging and declarative adapters.</span>
-          </a>
       </div>
     </div>
   </div>
-  <footer>
-    <ul>
-      <li>TEAM</li>
-      <li>TOOLS</li>
-      <li>STORE</li>
-      <li>NEWSLETTER</li>
-    </ul>
-    <span>© 2019 Pivotal Software, Inc. All Rights Reserved.</span>
-  </footer>
+  <div class="footer-container">
+    <footer>
+      <ul>
+        <li>TEAM</li>
+        <li>TOOLS</li>
+        <li>STORE</li>
+        <li>NEWSLETTER</li>
+      </ul>
+      <span>© 2019 Pivotal Software, Inc. All Rights Reserved.</span>
+    </footer>
+  </div>
+  <script type="text/javascript" src="Viewer.js"></script>
+  <script type="text/javascript" src="Handler.js"></script>
 </body>
