feat:add page search

--- a/task1/index.html
+++ b/task1/index.html
@@ -36,7 +36,7 @@
       </header>
   </div>
   <div class="big-search">
-    <input type="text" placeholder="Search for documentation, guides, and posts...">
+    <input class="input-big-search" type="text" placeholder="Search for documentation, guides, and posts...">
     <button class="big-search-button"><i class="fa fa-search" aria-hidden="true"></button></i>
   </div>
   <div class="body-container">
